--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/CompanyLogo.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/DeltaLogo(svg).svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PACIFIC</title>
+    <title>DELTA</title>
   </head>
   <body>
     <div id="root"></div>
